--- a/ML_assessment_.ipynb
+++ b/ML_assessment_.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +81,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dataset consists of 237 samples\n",
+      "The numerical data loaded consists of following columns:\n",
+      "\tColumn 0: Formation Energy\n",
+      "\tColumn 1: E Above Hull\n",
+      "\tColumn 2: Band Gap\n",
+      "\tColumn 3: Nsites\n",
+      "\tColumn 4: Density\n",
+      "\tColumn 5: Volume\n",
+      "\tColumn 6: Crystal System\n",
+      "An example sample:\n",
+      "\tFeature 0: Formation Energy=-2.555\n",
+      "\tFeature 1: E Above Hull=0.069\n",
+      "\tFeature 2: Band Gap=1.854\n",
+      "\tFeature 3: Nsites=15\n",
+      "\tFeature 4: Density=2.925\n",
+      "\tFeature 5: Volume=179.798\n",
+      "\tClass (Family): triclinic\n",
+      "The training set consists of 189 samples and 189 associated ground truth classes\n",
+      "The test set consists of 48 samples and 48 associated ground truth classes\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from itertools import count\n",
@@ -150,9 +176,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dataset consists of 58101 samples\n",
+      "The numerical data loaded consists of following columns:\n",
+      "\tColumn 0: Elevation\n",
+      "\tColumn 1: Aspect\n",
+      "\tColumn 2: Slope\n",
+      "\tColumn 3: Horizontal_Distance_To_Hydrology\n",
+      "\tColumn 4: Vertical_Distance_To_Hydrology\n",
+      "\tColumn 5: Horizontal_Distance_To_Roadways\n",
+      "\tColumn 6: Hillshade_9am\n",
+      "\tColumn 7: Hillshade_Noon\n",
+      "\tColumn 8: Hillshade_3pm\n",
+      "\tColumn 9: Horizontal_Distance_To_Fire_Points\n",
+      "\tColumn 10: Wilderness_Area\n",
+      "\tColumn 11: Soil_Type\n",
+      "\tColumn 12: Cover_Type\n",
+      "An example sample:\n",
+      "\tFeature 0: Elevation=3.0\n",
+      "\tFeature 1: Aspect=87.0\n",
+      "\tFeature 2: Slope=9.0\n",
+      "\tFeature 3: Horizontal_Distance_To_Hydrology=0.3\n",
+      "\tFeature 4: Vertical_Distance_To_Hydrology=0.0\n",
+      "\tFeature 5: Horizontal_Distance_To_Roadways=3.7\n",
+      "\tFeature 6: Hillshade_9am=233.0\n",
+      "\tFeature 7: Hillshade_Noon=226.0\n",
+      "\tFeature 8: Hillshade_3pm=125.0\n",
+      "\tFeature 9: Horizontal_Distance_To_Fire_Points=2.2\n",
+      "\tFeature 10: Wilderness_Area=Rawah\n",
+      "\tFeature 11: Soil_Type=ELU-7745\n",
+      "\tClass (Cover_Type): Lodgepole_Pine\n",
+      "The training set consists of 46480 samples and 46480 associated ground truth classes\n",
+      "The test set consists of 11621 samples and 11621 associated ground truth classes\n"
+     ]
+    }
+   ],
    "source": [
     "categorical_data = pd.read_csv(r'forestcover.csv')\n",
     "\n",
@@ -233,32 +297,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def class_probabilities(y):\n",
-    "    ################################\n",
-    "    ####### YOUR CODE HERE #########\n",
-    "    ################################\n",
+    "def class_frequency(y):\n",
+    "  class_freq = {}\n",
+    "  for i in y: \n",
+    "    if i not in class_freq.keys():\n",
+    "        class_freq[i] = 1 \n",
+    "    else:\n",
+    "        class_freq[i] = class_freq[i] + 1 \n",
     "\n",
-    "    return {} #  you should probably replace this line\n",
+    "  return class_freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'triclinic': 0.23628691983122363, 'monoclinic': 0.3881856540084388, 'orthorhombic': 0.3755274261603376}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def class_probabilities(y):\n",
+    "    class_probs = class_frequency(y)\n",
+    "\n",
+    "    total = sum(class_probs.values())\n",
+    "    \n",
+    "    for key in class_probs.keys():\n",
+    "        class_probs[key] = class_probs[key] / total\n",
+    "\n",
+    "    return class_probs\n",
+    "\n",
+    "\n",
+    "print(f\"{class_probabilities(y_nd)}\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "monoclinic\n"
+     ]
+    }
+   ],
    "source": [
     "def most_common_class(y):\n",
-    "    ################################\n",
-    "    ####### YOUR CODE HERE #########\n",
-    "    ################################\n",
+    "    classes = class_frequency(y)\n",
+    "    y = max(classes,  key = lambda x : classes[x])\n",
     "\n",
-    "    return 0 # you should probably replace this line\n",
-    "    "
+    "    return y\n",
+    "\n",
+    "print(f\"{most_common_class(y_nd)}\")\n"
    ]
   },
   {
@@ -270,9 +373,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All unique class labels and counts from numerical-only dataset: monoclinic: 92 orthorhombic: 89 triclinic: 56\n",
+      "All classes and their probabilities:\n",
+      "\ttriclinic: 0.23628691983122363\n",
+      "\tmonoclinic: 0.3881856540084388\n",
+      "\torthorhombic: 0.3755274261603376\n",
+      "Most common class in the numerical-only dataset: monoclinic\n",
+      "\n",
+      "\n",
+      "All unique class labels for the numerical-only training set: monoclinic: 76 orthorhombic: 69 triclinic: 44\n",
+      "All classes and their probabilities (num-only training set):\n",
+      "\ttriclinic: 0.2328042328042328\n",
+      "\tmonoclinic: 0.4021164021164021\n",
+      "\torthorhombic: 0.36507936507936506\n",
+      "Most common class in the num-only training set: monoclinic\n",
+      "\n",
+      "\n",
+      "All unique class labels for the numerical-only testing set: monoclinic: 16 orthorhombic: 20 triclinic: 12\n",
+      "All classes and their probabilities (num-only tests set):\n",
+      "\ttriclinic: 0.25\n",
+      "\tmonoclinic: 0.3333333333333333\n",
+      "\torthorhombic: 0.4166666666666667\n",
+      "Most common class in the num-only test set: orthorhombic\n",
+      "\n",
+      "\n",
+      "All class labels for a toy set: [1, 0, 0, 0, 1, 2, 1, 1, 2, 1]\n",
+      "All classses and their probabilities for the toy set:\n",
+      "\t1: 0.5\n",
+      "\t0: 0.3\n",
+      "\t2: 0.2\n",
+      "Most common class in the toy set: 1\n",
+      "\n",
+      "\n",
+      "All classes and their probabilities from the categorical dataset:\n",
+      "\tLodgepole_Pine: 0.486\n",
+      "\tKrummholz: 0.035\n",
+      "\tSpruce/Fir: 0.367\n",
+      "\tPonderosa_Pine: 0.062\n",
+      "\tDouglas-fir: 0.029\n",
+      "\tAspen: 0.017\n",
+      "\tCottonwood/Willow: 0.005\n",
+      "Most common class in the categorical dataset: Lodgepole_Pine\n"
+     ]
+    }
+   ],
    "source": [
     "unq, cnt = np.unique(y_nd, return_counts=True)\n",
     "print(\"All unique class labels and counts from numerical-only dataset: {}\".format(\n",
@@ -320,6 +471,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -355,7 +507,7 @@
     "    ```python\n",
     "    x1 = [7, -1]\n",
     "    x2 = [4, 3]\n",
-    "    print(euclidean_distance(x1, x2)\n",
+    "    print(euclidean_distance(x1, x2))\n",
     "    ```\n",
     "    *Example output:*<br>\n",
     "    `5.0`\n",
@@ -372,15 +524,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "def euclidean_distance(x1, x2):\n",
-    "                \n",
-    "    ################################\n",
-    "    ####### YOUR CODE HERE #########\n",
-    "    ################################\n"
+    "    sumOf = 0\n",
+    "    try:\n",
+    "        for i in range(len(x1)):\n",
+    "            sumOf += (x1[i] - x2[i])**2\n",
+    "        return np.sqrt(sumOf)\n",
+    "\n",
+    "    except IndexError:\n",
+    "        print(\"IndexError , Lists do not have the same number of elements\")\n"
    ]
   },
   {
@@ -392,9 +548,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Euclidean distance between [7, -1] (2D) and [4, 3] (2D) is 5.0\n",
+      "Euclidean distance between [1, 2] (2D) and [3, 4] (2D) is 2.828\n",
+      "Euclidean distance between [4.2, 3.6, 1.0] (3D) and [5.7, 2.8, -1.5] (3D) is 3.023\n",
+      "Euclidean distance between [0.33366062 0.6891963  0.5875138  0.29302358 0.54378176 0.99415789\n",
+      " 0.5332586  0.4329688  0.67415208 0.73593557 0.36877583 0.35831752\n",
+      " 0.81229022 0.33688536 0.44172735 0.17330498 0.70872367 0.95835968\n",
+      " 0.61726008 0.34969473] (20D) and [0.47710372 0.27885557 0.76092811 0.03305059 0.65579759 0.56618769\n",
+      " 0.97735804 0.38897159 0.50037691 0.63617616 0.94781421 0.81519684\n",
+      " 0.45618123 0.87106069 0.64487754 0.14075118 0.82453077 0.27418733\n",
+      " 0.88515984 0.56804633] (20D) is 1.524\n"
+     ]
+    }
+   ],
    "source": [
     "a = [7, -1]\n",
     "b = [4, 3]\n",
@@ -459,38 +632,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import Counter\n",
+    "\n",
     "class knn:\n",
     "    def __init__(self, k = 5, distance = euclidean_distance):\n",
-    "        \n",
-    "        ################################\n",
-    "        ####### YOUR CODE HERE #########\n",
-    "        ################################\n",
+    "        self.k = k\n",
+    "        self.distance = distance\n",
     "       \n",
     "    def fit(self, X, y):\n",
-    "        \n",
-    "        ################################\n",
-    "        ####### YOUR CODE HERE #########\n",
-    "        ################################\n",
+    "        self.X_train = X\n",
+    "        self.y_train = y\n",
     "\n",
     "        return self # this should probably be the last line in your fit function\n",
     "            \n",
     "    def predict(self, X):\n",
-    "        \n",
     "        # the fololwing block of code handles lists/arrays containing multiple samples\n",
     "        X = np.array(X)\n",
     "        if len(X.shape) >= 2:\n",
     "            return np.array([self.predict(x) for x in X])\n",
     "        \n",
     "        # in the following section, you can assume that X is a single n-dimensional sample:\n",
-    "        ################################\n",
-    "        ####### YOUR CODE HERE #########\n",
-    "        ################################\n",
+    "        distances = [self.distance(X, x_train) for x_train in self.X_train]\n",
+    "        indices = np.argsort(distances)[:self.k]\n",
+    "        nearest_labels = [self.y_train[i] for i in indices]\n",
+    "        most_common = Counter(nearest_labels).most_common()\n",
+    "        return most_common[0][0]\n",
     "\n",
-    "        return 0 # you may replace this line\n",
     "        "
    ]
   },
@@ -503,9 +674,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample: [-2.45500e+00  7.00000e-02  2.34400e+00  2.60000e+01  3.21300e+00\n",
+      "  3.09993e+02]\n",
+      "\tPredicted class: triclinic\n",
+      "\tTrue class: orthorhombic\n",
+      "Sample: [-2.35200e+00  8.30000e-02  1.36700e+00  2.80000e+01  2.93500e+00\n",
+      "  3.57496e+02]\n",
+      "\tPredicted class: monoclinic\n",
+      "\tTrue class: orthorhombic\n",
+      "Sample: [-2.55300e+00  7.30000e-02  2.64900e+00  3.20000e+01  2.87700e+00\n",
+      "  3.73622e+02]\n",
+      "\tPredicted class: monoclinic\n",
+      "\tTrue class: monoclinic\n",
+      "Sample: [-2.43900e+00  5.70000e-02  2.30000e-01  1.50000e+01  3.02400e+00\n",
+      "  1.77312e+02]\n",
+      "\tPredicted class: triclinic\n",
+      "\tTrue class: triclinic\n",
+      "Sample: [-2.88700e+00  4.00000e-02  3.14400e+00  5.20000e+01  2.69000e+00\n",
+      "  6.79101e+02]\n",
+      "\tPredicted class: orthorhombic\n",
+      "\tTrue class: monoclinic\n",
+      "Sample: [-2.56400e+00  5.80000e-02  2.73000e+00  2.80000e+01  2.85600e+00\n",
+      "  3.60121e+02]\n",
+      "\tPredicted class: monoclinic\n",
+      "\tTrue class: orthorhombic\n",
+      "Sample: [-2.91100e+00  6.40000e-02  3.07900e+00  3.40000e+01  2.63300e+00\n",
+      "  4.31422e+02]\n",
+      "\tPredicted class: triclinic\n",
+      "\tTrue class: triclinic\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialise the classifier with k=3 (using 9 neigbours)\n",
     "classifier = knn(k=9)\n",
@@ -515,7 +721,7 @@
     "# Predict the classification for some samples to the testing set\n",
     "for (sample, prediction, truth) in zip(X_nd_test[3:10], classifier.predict(X_nd_test[3:10]), y_nd_test[3:10]):\n",
     "    # Print the sample, predicted class and ground truth\n",
-    "    print(\"Sample: {}\\n\\tPredicted class: {}\\n\\tTrue class: {}\".format(sample, prediction, truth))"
+    "    print(\"Sample: {}\\n\\tPredicted class: {}\\n\\tTrue class: {}\".format(sample, prediction, truth))\n"
    ]
   },
   {
@@ -579,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,9 +807,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entropy of a set with only one class: 0\n",
+      "Entropy of a set with two equally probable classes: 0\n",
+      "Entropy of a set with four equally probable clasess: 0\n",
+      "Entropy of a set with four classes with different probabilities: 0.000\n",
+      "Entropy of the numerical (batteries) dataset: 0.000\n",
+      "Entropy of the categorical (forest cover) dataset: 0.000\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Entropy of a set with only one class: {}\".format(entropy([1.0])))\n",
     "print(\"Entropy of a set with two equally probable classes: {}\".format(entropy([0.5, 0.5])))\n",
@@ -705,9 +924,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after function definition on line 2 (809559366.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [56], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    def fit(self, X, y):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after function definition on line 2\n"
+     ]
+    }
+   ],
    "source": [
     "class DecisionTree:\n",
     "    def __init__(self, max_depth = -1, min_samples_per_node = 1):\n",
@@ -985,7 +1213,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
