--- a/ML_assessment_.ipynb
+++ b/ML_assessment_.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -558,13 +558,13 @@
       "Euclidean distance between [7, -1] (2D) and [4, 3] (2D) is 5.0\n",
       "Euclidean distance between [1, 2] (2D) and [3, 4] (2D) is 2.828\n",
       "Euclidean distance between [4.2, 3.6, 1.0] (3D) and [5.7, 2.8, -1.5] (3D) is 3.023\n",
-      "Euclidean distance between [0.33366062 0.6891963  0.5875138  0.29302358 0.54378176 0.99415789\n",
-      " 0.5332586  0.4329688  0.67415208 0.73593557 0.36877583 0.35831752\n",
-      " 0.81229022 0.33688536 0.44172735 0.17330498 0.70872367 0.95835968\n",
-      " 0.61726008 0.34969473] (20D) and [0.47710372 0.27885557 0.76092811 0.03305059 0.65579759 0.56618769\n",
-      " 0.97735804 0.38897159 0.50037691 0.63617616 0.94781421 0.81519684\n",
-      " 0.45618123 0.87106069 0.64487754 0.14075118 0.82453077 0.27418733\n",
-      " 0.88515984 0.56804633] (20D) is 1.524\n"
+      "Euclidean distance between [0.99335852 0.65767858 0.89576396 0.79826166 0.49762731 0.94920702\n",
+      " 0.17664603 0.48036003 0.40249202 0.86783219 0.27490699 0.03604503\n",
+      " 0.65244061 0.59239758 0.23650525 0.34723739 0.89209492 0.81748021\n",
+      " 0.30646894 0.28441438] (20D) and [0.02436284 0.47423929 0.48647301 0.90280867 0.45938303 0.53879664\n",
+      " 0.05450294 0.29356703 0.8142951  0.07136074 0.01176113 0.17249828\n",
+      " 0.29886846 0.60776554 0.44404152 0.74605577 0.25096913 0.53293728\n",
+      " 0.00907258 0.1478516 ] (20D) is 1.786\n"
      ]
     }
    ],
@@ -632,11 +632,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import Counter\n",
+    "\n",
     "\n",
     "class knn:\n",
     "    def __init__(self, k = 5, distance = euclidean_distance):\n",
@@ -666,6 +667,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code was created using the tutorial found on github & youtube | [How to implement KNN from scratch with Python by  AssemblyAI\n",
+    "](https://github.com/AssemblyAI-Examples/Machine-Learning-From-Scratch/tree/main/01%20KNN) [Accessed on 27/12/2022]\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -674,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -785,16 +795,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def entropy(p_per_class):\n",
-    "    ################################\n",
-    "    ####### YOUR CODE HERE #########\n",
-    "    ################################\n",
-    "\n",
-    "    return 0 # you may replace this line\n",
+    "    sumOfE = 0\n",
+    "    for i in p_per_class:\n",
+    "        sumOfE+= (i * np.log2(i))\n",
+    "    return -sumOfE \n",
     "    "
    ]
   },
@@ -807,19 +816,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entropy of a set with only one class: 0\n",
-      "Entropy of a set with two equally probable classes: 0\n",
-      "Entropy of a set with four equally probable clasess: 0\n",
-      "Entropy of a set with four classes with different probabilities: 0.000\n",
-      "Entropy of the numerical (batteries) dataset: 0.000\n",
-      "Entropy of the categorical (forest cover) dataset: 0.000\n"
+      "Entropy of a set with only one class: -0.0\n",
+      "Entropy of a set with two equally probable classes: 1.0\n",
+      "Entropy of a set with four equally probable clasess: 2.0\n",
+      "Entropy of a set with four classes with different probabilities: 1.846\n",
+      "Entropy of the numerical (batteries) dataset: 1.552\n",
+      "Entropy of the categorical (forest cover) dataset: 1.739\n"
      ]
     }
    ],
@@ -924,44 +933,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after function definition on line 2 (809559366.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [56], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    def fit(self, X, y):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after function definition on line 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "class Node:\n",
+    "    def __init__(self, feature = None, threshold = None, right = None, left = None, *,value = None):\n",
+    "        self.feature = feature\n",
+    "        self.threshold = threshold\n",
+    "        self.right = right\n",
+    "        self.left = left\n",
+    "        self.value = value\n",
+    "\n",
+    "    def is_leaf_Node(self):\n",
+    "        return self.value is not None #checks if the leaf node is in fact a leaf node\n",
+    "\n",
     "class DecisionTree:\n",
-    "    def __init__(self, max_depth = -1, min_samples_per_node = 1):\n",
-    "        ################################\n",
-    "        ####### YOUR CODE HERE #########\n",
-    "        ################################\n",
-    "           \n",
+    "    def __init__(self, max_depth = -1, min_samples_per_node = 1, n_features = None, entropy = entropy):\n",
+    "        self.max_depth = max_depth\n",
+    "        self.min_samples_per_node = min_samples_per_node\n",
+    "        self.n_features = n_features\n",
+    "        self.root = None\n",
+    "        self.entropy = entropy\n",
+    "\n",
     "    def fit(self, X, y):\n",
-    "        ################################\n",
-    "        ####### YOUR CODE HERE #########\n",
-    "        ################################\n",
+    "        self.n_features = X.shape[1] if not self.n_features else min(X.shape[1],self.n_features)\n",
+    "        self.root = self._grow(X,y)\n",
+    "\n",
+    "    def _grow(self, X, y,depth = 0):\n",
     "        \n",
-    "        return self # you may replace this line\n",
+    "        n_samples , n_feat = X.shape\n",
+    "        n_labels = len(np.unique(y))\n",
+    "\n",
+    "        #stop\n",
+    "        if(depth >= self.max_depth or n_labels == 1 or n_samples < self.min_samples_per_node):\n",
+    "            leaf_value = self._most_labels(y)\n",
+    "            return Node(value=leaf_value)\n",
+    "\n",
+    "        feat = np.random.choice(n_feat,self.n_features,replace=False)\n",
+    "        #best split\n",
+    "\n",
+    "        b_feature, b_threshold = self._best_split(X,y , feat)\n",
+    "\n",
+    "\n",
+    "        #child nodes\n",
+    "        left_indeces , right_indeces = self._split(X[:, b_feature] , b_threshold)\n",
+    "        left = self._grow(X[left_indeces, :], y[left_indeces] ,depth+1)\n",
+    "        right = self._grow(X[right_indeces, :], y[right_indeces], depth+1)\n",
+    "        return Node(b_feature,b_threshold,left,right)\n",
+    "\n",
+    "    def _most_labels(self,y):\n",
+    "        value = Counter(y).most_common(1)[0][0]\n",
+    "        print(value)\n",
+    "        return value\n",
+    "\n",
+    "        \n",
+    "    def _best_split(self,X, y , feat):\n",
+    "        b_gain = -1\n",
+    "        split_index , split_threshold = None , None\n",
+    "\n",
+    "        for i in feat :\n",
+    "            X_col = X[:,i]\n",
+    "            thresholds = np.unique(X_col)\n",
+    "\n",
+    "            for threshold in thresholds:\n",
+    "                gain = self._info_gain(y, X_col, threshold)\n",
+    "                if gain > b_gain:\n",
+    "                    b_gain = gain\n",
+    "                    split_index = feat\n",
+    "                    split_threshold = threshold\n",
+    "\n",
+    "        return split_index, split_threshold\n",
+    "    \n",
+    "    def _info_gain(self, y , X_col , threshold):\n",
+    "        parent_entropy = self.entropy(y)\n",
+    "        left_indeces , right_indeces = self._split(X_col , threshold)\n",
+    "        if len(left_indeces) == 0 or len(right_indeces) == 0:\n",
+    "            return 0\n",
+    "\n",
+    "        #weighted entropy of the children\n",
+    "        y_count = len(y)\n",
+    "        left_count , right_count = len(left_indeces) , len(right_indeces)\n",
+    "        left_entropy , right_entropy = self.entropy(y[left_indeces]) , self.entropy(y[right_indeces])\n",
+    "        child_entropy = (left_count / y_count) * left_entropy + (left_count / y_count) * right_entropy\n",
+    "\n",
+    "        #finding info gain\n",
+    "\n",
+    "        return parent_entropy - child_entropy\n",
+    "    \n",
+    "    \n",
+    "    def _split(self, X_col, split_threshold):\n",
+    "        left_indeces = np.argwhere(X_col <= split_threshold).flatten()\n",
+    "        right_indeces = np.argwhere(X_col > split_threshold).flatten()\n",
+    "        return left_indeces, right_indeces\n",
+    "\n",
     "               \n",
     "    def predict(self, X):\n",
-    "\n",
-    "        # the fololwing block of code handles lists/arrays containing multiple samples\n",
+    "        \n",
+    "        #the fololwing block of code handles lists/arrays containing multiple samples\n",
     "        X = np.array(X)\n",
     "        if len(X.shape) >= 2:\n",
     "            return np.array([self.predict(x) for x in X])\n",
+    "\n",
+    "        return np.array([self._traverse_tree(x, self.root)] for x in X)\n",
+    "    \n",
+    "    def _traverse_tree(self, x , node):\n",
+    "        if node.is_leaf_Node():\n",
+    "            return node.value\n",
     "        \n",
-    "        # in the following section, you can assume that X is a single n-dimensional sample:\n",
-    "        ################################\n",
-    "        ####### YOUR CODE HERE #########\n",
-    "        ################################\n",
+    "        elif x[node.feature] <= node.threshold:\n",
+    "            return self._traverse_tree(x,node.left)\n",
+    "        \n",
+    "        return self._traverse_tree(x,node.right )\n",
+    "\n",
+    "\n",
+    "\n",
     "        "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code was created using the tutorial found on github & youtube | [How to implement Decision Trees from scratch with Python by  AssemblyAI\n",
+    "](https://github.com/AssemblyAI-Examples/Machine-Learning-From-Scratch/tree/main/04%20Decision%20Trees) [Accessed on 2/1/2023]"
    ]
   },
   {
@@ -980,9 +1076,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "monoclinic\n",
+      "Sample: [-2.45500e+00  7.00000e-02  2.34400e+00  2.60000e+01  3.21300e+00\n",
+      "  3.09993e+02]\n",
+      "\tPredicted class: <generator object DecisionTree.predict.<locals>.<genexpr> at 0x7fb7ef79f450>\n",
+      "\tTrue class: orthorhombic\n",
+      "Sample: [-2.35200e+00  8.30000e-02  1.36700e+00  2.80000e+01  2.93500e+00\n",
+      "  3.57496e+02]\n",
+      "\tPredicted class: <generator object DecisionTree.predict.<locals>.<genexpr> at 0x7fb7ef79ef80>\n",
+      "\tTrue class: orthorhombic\n",
+      "Sample: [-2.55300e+00  7.30000e-02  2.64900e+00  3.20000e+01  2.87700e+00\n",
+      "  3.73622e+02]\n",
+      "\tPredicted class: <generator object DecisionTree.predict.<locals>.<genexpr> at 0x7fb7ef79ef10>\n",
+      "\tTrue class: monoclinic\n",
+      "Sample: [-2.43900e+00  5.70000e-02  2.30000e-01  1.50000e+01  3.02400e+00\n",
+      "  1.77312e+02]\n",
+      "\tPredicted class: <generator object DecisionTree.predict.<locals>.<genexpr> at 0x7fb7ef79e6c0>\n",
+      "\tTrue class: triclinic\n",
+      "Sample: [-2.88700e+00  4.00000e-02  3.14400e+00  5.20000e+01  2.69000e+00\n",
+      "  6.79101e+02]\n",
+      "\tPredicted class: <generator object DecisionTree.predict.<locals>.<genexpr> at 0x7fb7ef79eea0>\n",
+      "\tTrue class: monoclinic\n",
+      "Sample: [-2.56400e+00  5.80000e-02  2.73000e+00  2.80000e+01  2.85600e+00\n",
+      "  3.60121e+02]\n",
+      "\tPredicted class: <generator object DecisionTree.predict.<locals>.<genexpr> at 0x7fb7ef79f610>\n",
+      "\tTrue class: orthorhombic\n",
+      "Sample: [-2.91100e+00  6.40000e-02  3.07900e+00  3.40000e+01  2.63300e+00\n",
+      "  4.31422e+02]\n",
+      "\tPredicted class: <generator object DecisionTree.predict.<locals>.<genexpr> at 0x7fb7ef79f680>\n",
+      "\tTrue class: triclinic\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialise the classifier, requiring at least 3 samples in each node\n",
     "classifier = DecisionTree(min_samples_per_node = 3)\n",
@@ -1005,9 +1137,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample: [2.4 48.0 11.0 0.0 0.0 0.4 224.0 215.0 123.0 1.3 'Cache_la_Poudre'\n",
+      " 'ELU-2717']\n",
+      "\tPredicted class: None\n",
+      "\tTrue class: Cottonwood/Willow\n",
+      "Sample: [3.3 67.0 16.0 0.1 0.0 1.7 234.0 207.0 100.0 1.9 'Rawah' 'ELU-8772']\n",
+      "\tPredicted class: None\n",
+      "\tTrue class: Spruce/Fir\n",
+      "Sample: [3.3 60.0 15.0 0.1 -0.0 2.4 231.0 207.0 104.0 4.1 'Neota' 'ELU-8703']\n",
+      "\tPredicted class: None\n",
+      "\tTrue class: Spruce/Fir\n",
+      "Sample: [3.2 62.0 10.0 0.4 0.0 2.0 229.0 219.0 122.0 0.9 'Comanche_Peak'\n",
+      " 'ELU-7755']\n",
+      "\tPredicted class: None\n",
+      "\tTrue class: Spruce/Fir\n",
+      "Sample: [2.9 121.0 6.0 0.5 0.1 3.6 230.0 235.0 139.0 3.1 'Rawah' 'ELU-4744']\n",
+      "\tPredicted class: None\n",
+      "\tTrue class: Lodgepole_Pine\n",
+      "Sample: [3.2 155.0 15.0 0.2 0.0 0.4 237.0 240.0 129.0 2.3 'Neota' 'ELU-4758']\n",
+      "\tPredicted class: None\n",
+      "\tTrue class: Spruce/Fir\n",
+      "Sample: [3.0 330.0 8.0 0.1 0.0 2.6 201.0 231.0 169.0 6.2 'Rawah' 'ELU-7745']\n",
+      "\tPredicted class: None\n",
+      "\tTrue class: Spruce/Fir\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialise the classifier, requiring the decision tree to have no more than 5 levels\n",
     "classifier = DecisionTree(max_depth = 4)\n",
@@ -1062,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,9 +1256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating numerical dataset, using kNN:\n",
+      "Accuracy = 0.0000, Cohen's Kappa = 0.0000\n",
+      "Evaluating numerical dataset, using DecisionTree:\n",
+      "Accuracy = 0.0000, Cohen's Kappa = 0.0000\n"
+     ]
+    }
+   ],
    "source": [
     "classifier_knn = knn(k=5)\n",
     "classifier_knn.fit(X_nd_train, y_nd_train)\n",
@@ -1132,9 +1305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating categorical dataset, using DecisionTree:\n",
+      "Accuracy = 0.0000, Cohen's Kappa = 0.0000\n"
+     ]
+    }
+   ],
    "source": [
     "classifier_categorical = DecisionTree(max_depth = 4)\n",
     "classifier_categorical.fit(X_cd_train, y_cd_train)\n",
@@ -1176,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
