--- a/ML_assessment_.ipynb
+++ b/ML_assessment_.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 1,
       "metadata": {
         "id": "lwZaTDWRHNy1"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -326,8 +326,8 @@
       "source": [
         "def class_probabilities(y):\n",
         "    class_probs = {}\n",
-        "\n",
         "    for i in y :\n",
+        "      \n",
         "      if i not in class_probs.keys():\n",
         "        class_probs[i] = 1\n",
         "      else:\n",
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -384,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 8,
       "metadata": {
         "id": "cqPsuFeBHNy6"
       },
@@ -574,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -590,13 +590,13 @@
             "Euclidean distance between [7, -1] (2D) and [4, 3] (2D) is 5.0\n",
             "Euclidean distance between [1, 2] (2D) and [3, 4] (2D) is 2.828\n",
             "Euclidean distance between [4.2, 3.6, 1.0] (3D) and [5.7, 2.8, -1.5] (3D) is 3.023\n",
-            "Euclidean distance between [0.18733201 0.62481447 0.41689204 0.61820449 0.60233545 0.48967182\n",
-            " 0.03010023 0.43569313 0.37264048 0.21606961 0.08153276 0.92906295\n",
-            " 0.62146339 0.57145565 0.90674103 0.62701003 0.17804944 0.67799037\n",
-            " 0.50785232 0.58844483] (20D) and [0.2549031  0.31579954 0.80024074 0.11240173 0.20288324 0.07234918\n",
-            " 0.56611276 0.86889711 0.14318678 0.66043709 0.4391068  0.9908914\n",
-            " 0.59717103 0.82537297 0.32133878 0.98929645 0.06538065 0.05594371\n",
-            " 0.55253632 0.56911978] (20D) is 1.623\n"
+            "Euclidean distance between [0.04557494 0.06486066 0.33328345 0.2258771  0.8065989  0.72129495\n",
+            " 0.72633648 0.48827758 0.73395273 0.07510194 0.21704914 0.86664647\n",
+            " 0.14082897 0.53617755 0.26350641 0.58246241 0.37022202 0.67794893\n",
+            " 0.90363423 0.50645622] (20D) and [0.38316114 0.11312597 0.43122139 0.53999778 0.22555197 0.47170201\n",
+            " 0.36114372 0.19450733 0.5703546  0.87404828 0.00341313 0.98172937\n",
+            " 0.88040885 0.95807518 0.874903   0.85750904 0.29854978 0.35040661\n",
+            " 0.13477413 0.70567082] (20D) is 1.867\n"
           ]
         }
       ],
@@ -668,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 10,
       "metadata": {
         "id": "qnMa0WUtHNy7"
       },
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -848,7 +848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 12,
       "metadata": {
         "id": "Uy4C-2MGHNy8"
       },
@@ -878,7 +878,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 14,
       "metadata": {
         "id": "bAT2L8_RHNy9"
       },
@@ -1114,12 +1114,12 @@
         "    \"\"\"\n",
         "    \n",
         "    def _split(self, X_col, split_threshold):\n",
+        "        left_indeces = np.argwhere(X_col <= split_threshold).flatten()\n",
+        "        right_indeces = np.argwhere(X_col > split_threshold).flatten()\n",
         "        if isinstance(X_col,str):\n",
         "          left_indeces = np.argwhere(X_col == split_threshold).flatten()\n",
         "          right_indeces = np.argwhere(X_col != split_threshold).flatten()\n",
-        "        else:\n",
-        "          left_indeces = np.argwhere(X_col <= split_threshold).flatten()\n",
-        "          right_indeces = np.argwhere(X_col > split_threshold).flatten()\n",
+        "        \n",
         "        return left_indeces, right_indeces\n",
         "\n",
         "    def _traverse_tree(self, x , node):\n",
@@ -1167,7 +1167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1188,7 +1188,7 @@
             "\tTrue class: orthorhombic\n",
             "Sample: [-2.35200e+00  8.30000e-02  1.36700e+00  2.80000e+01  2.93500e+00\n",
             "  3.57496e+02]\n",
-            "\tPredicted class: orthorhombic\n",
+            "\tPredicted class: monoclinic\n",
             "\tTrue class: orthorhombic\n",
             "Sample: [-2.55300e+00  7.30000e-02  2.64900e+00  3.20000e+01  2.87700e+00\n",
             "  3.73622e+02]\n",
@@ -1196,7 +1196,7 @@
             "\tTrue class: monoclinic\n",
             "Sample: [-2.43900e+00  5.70000e-02  2.30000e-01  1.50000e+01  3.02400e+00\n",
             "  1.77312e+02]\n",
-            "\tPredicted class: monoclinic\n",
+            "\tPredicted class: orthorhombic\n",
             "\tTrue class: triclinic\n",
             "Sample: [-2.88700e+00  4.00000e-02  3.14400e+00  5.20000e+01  2.69000e+00\n",
             "  6.79101e+02]\n",
@@ -1204,7 +1204,7 @@
             "\tTrue class: monoclinic\n",
             "Sample: [-2.56400e+00  5.80000e-02  2.73000e+00  2.80000e+01  2.85600e+00\n",
             "  3.60121e+02]\n",
-            "\tPredicted class: monoclinic\n",
+            "\tPredicted class: orthorhombic\n",
             "\tTrue class: orthorhombic\n",
             "Sample: [-2.91100e+00  6.40000e-02  3.07900e+00  3.40000e+01  2.63300e+00\n",
             "  4.31422e+02]\n",
@@ -1237,7 +1237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1338,39 +1338,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 72,
       "metadata": {
         "id": "8i-ok5GzHNy_"
       },
       "outputs": [],
       "source": [
         "from sklearn import metrics\n",
-        "import matplotlib.pyplot as plt\n",
         "\n",
         "\n",
-        "def cohens_kappa(y_true, y_pred, accuracy):\n",
-        "    p_target = class_probabilities(y_true)\n",
-        "    p_predict = class_probabilities(y_pred)\n",
-        "    print(p_target, p_predict)\n",
-        "    p_e = 0\n",
-        "    for label in p_target:\n",
-        "        print(p_target[label])\n",
-        "        p_e += p_target[label] * p_predict[label]\n",
-        "\n",
-        "    return (accuracy - p_e)/(1 - p_e)\n",
-        "\n",
-        "def get_accuracy(y_true, y_pred):\n",
-        "    correct = 0\n",
-        "    for true , predicted in zip(y_true, y_pred):\n",
-        "        if true == predicted:\n",
-        "            correct +=1\n",
-        "    return  correct/len(y_true)\n",
-        "    \n",
         "def evaluate(y_true, y_pred):\n",
+        "    labels = []\n",
         "    precision = {}\n",
         "    recall = {}\n",
-        "    accuracy = get_accuracy(y_true, y_pred)\n",
-        "    kappa = cohens_kappa(y_true, y_pred, accuracy)\n",
+        "    \n",
+        "    for label in y_true: \n",
+        "        if label not in labels: labels.append(label)\n",
+        "    \n",
+        "    p , r , f , s = metrics.precision_recall_fscore_support(y_true , y_pred , labels = labels)\n",
+        "\n",
+        "    for i in range(len(labels)):\n",
+        "        precision[labels[i]] = p[i]\n",
+        "        recall[labels[i]] = r[i]\n",
+        "    \n",
+        "    accuracy = metrics.accuracy_score(y_true, y_pred)\n",
+        "    kappa = metrics.cohen_kappa_score(y_true, y_pred)\n",
         "    \n",
         "    return accuracy,precision,recall,kappa # you may replace this line\n",
         "    "
@@ -1396,7 +1388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 70,
       "metadata": {
         "id": "43fE_JfhHNy_"
       },
@@ -1406,12 +1398,16 @@
           "output_type": "stream",
           "text": [
             "Fitting...\n",
-            "{'triclinic': 0.25, 'monoclinic': 0.3333333333333333, 'orthorhombic': 0.4166666666666667} {'monoclinic': 0.375, 'orthorhombic': 0.375, 'triclinic': 0.25}\n",
-            "{'triclinic': 0.25, 'monoclinic': 0.3333333333333333, 'orthorhombic': 0.4166666666666667} {'monoclinic': 0.4583333333333333, 'orthorhombic': 0.3541666666666667, 'triclinic': 0.1875}\n",
             "Evaluating numerical dataset, using kNN:\n",
             "Accuracy = 0.5833, Cohen's Kappa = 0.3651\n",
+            "\tClass triclinic: precision = 0.50, recall = 0.50\n",
+            "\tClass monoclinic: precision = 0.56, recall = 0.62\n",
+            "\tClass orthorhombic: precision = 0.67, recall = 0.60\n",
             "Evaluating numerical dataset, using DecisionTree:\n",
-            "Accuracy = 0.5625, Cohen's Kappa = 0.3298\n"
+            "Accuracy = 0.5417, Cohen's Kappa = 0.2960\n",
+            "\tClass triclinic: precision = 0.71, recall = 0.42\n",
+            "\tClass monoclinic: precision = 0.44, recall = 0.69\n",
+            "\tClass orthorhombic: precision = 0.62, recall = 0.50\n"
           ]
         }
       ],
@@ -1452,7 +1448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 71,
       "metadata": {
         "id": "OgnDSILEHNzA"
       },
@@ -1462,22 +1458,23 @@
           "output_type": "stream",
           "text": [
             "Fitting...\n",
-            "{'Spruce/Fir': 0.3638241115222442, 'Cottonwood/Willow': 0.005077015747353929, 'Lodgepole_Pine': 0.48859822734704417, 'Ponderosa_Pine': 0.06514069357198175, 'Krummholz': 0.03407624128732467, 'Douglas-fir': 0.029343429997418468, 'Aspen': 0.01394028052663282} {'Spruce/Fir': 0.3873160657430514, 'Lodgepole_Pine': 0.4961707254108941, 'Ponderosa_Pine': 0.08768608553480768, 'Krummholz': 0.025643232079855433, 'Douglas-fir': 0.0031838912313914467}\n",
-            "0.3638241115222442\n",
-            "0.005077015747353929\n"
+            "Evaluating categorical dataset, using DecisionTree:\n",
+            "Accuracy = 0.6987, Cohen's Kappa = 0.5061\n",
+            "\tClass Spruce/Fir: precision = 0.67, recall = 0.71\n",
+            "\tClass Cottonwood/Willow: precision = 0.00, recall = 0.00\n",
+            "\tClass Lodgepole_Pine: precision = 0.74, recall = 0.75\n",
+            "\tClass Ponderosa_Pine: precision = 0.64, recall = 0.86\n",
+            "\tClass Krummholz: precision = 0.68, recall = 0.52\n",
+            "\tClass Douglas-fir: precision = 0.46, recall = 0.05\n",
+            "\tClass Aspen: precision = 0.00, recall = 0.00\n"
           ]
         },
         {
-          "ename": "KeyError",
-          "evalue": "'Cottonwood/Willow'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[1;32md:\\University\\Year 3\\machine-learning-2\\ML_assessment_.ipynb Cell 50\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m classifier_categorical\u001b[39m.\u001b[39mfit(X_cd_train, y_cd_train)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m y_cd_pred \u001b[39m=\u001b[39m classifier_categorical\u001b[39m.\u001b[39mpredict(X_cd_test)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m a_cat, p_cat, r_cat, k_cat \u001b[39m=\u001b[39m evaluate(y_cd_test, y_cd_pred)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEvaluating categorical dataset, using DecisionTree:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAccuracy = \u001b[39m\u001b[39m{:.4f}\u001b[39;00m\u001b[39m, Cohen\u001b[39m\u001b[39m'\u001b[39m\u001b[39ms Kappa = \u001b[39m\u001b[39m{:.4f}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(a_cat, k_cat))\n",
-            "\u001b[1;32md:\\University\\Year 3\\machine-learning-2\\ML_assessment_.ipynb Cell 50\u001b[0m in \u001b[0;36mevaluate\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m recall \u001b[39m=\u001b[39m {}\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m accuracy \u001b[39m=\u001b[39m get_accuracy(y_true, y_pred)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m kappa \u001b[39m=\u001b[39m cohens_kappa(y_true, y_pred, accuracy)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mreturn\u001b[39;00m accuracy,precision,recall,kappa\n",
-            "\u001b[1;32md:\\University\\Year 3\\machine-learning-2\\ML_assessment_.ipynb Cell 50\u001b[0m in \u001b[0;36mcohens_kappa\u001b[1;34m(y_true, y_pred, accuracy)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfor\u001b[39;00m label \u001b[39min\u001b[39;00m p_target:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mprint\u001b[39m(p_target[label])\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     p_e \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m p_target[label] \u001b[39m*\u001b[39m p_predict[label]\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/University/Year%203/machine-learning-2/ML_assessment_.ipynb#Y101sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mreturn\u001b[39;00m (accuracy \u001b[39m-\u001b[39m p_e)\u001b[39m/\u001b[39m(\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m p_e)\n",
-            "\u001b[1;31mKeyError\u001b[0m: 'Cottonwood/Willow'"
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/jacob/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n"
           ]
         }
       ],
@@ -1526,7 +1523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "4hoXpvpWHNzA"
       },
@@ -1537,6 +1534,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "PwR49FbJHNzA"
@@ -1545,6 +1543,9 @@
         "#### YOUR ANSWERS:\n",
         "\n",
         "1. <font color='red'>Answer to question 1</font> \n",
+        "Accuracy the numerator of the amount of correct predictions that the model made. \n",
+        "\n",
+        "\n",
         "2. <font color='red'>Answer to question 2</font> \n",
         "3. <font color='red'>Answer to question 3</font> \n",
         "4. <font color='red'>Answer to question 4</font> "
@@ -1557,7 +1558,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1571,11 +1572,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
-        "hash": "ebfb2b256e1a9040d98e64162fa090ace91e809b551a2a06e59be57ef64eb9a2"
+        "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
       }
     }
   },
